Made split view possible. Still need to ensure one card at a time and fix split / fixed spacing

--- a/stocks/src/App.css
+++ b/stocks/src/App.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito&family=Rubik&display=swap');
 
 body {
-    font-family: 'Rubik', sans-serif;
+    font-family: 'Nunito', sans-serif;
     background-color: black;
   }
