--- a/stocks/src/components/StockCard.css
+++ b/stocks/src/components/StockCard.css
@@ -1,73 +1,62 @@
+
+
 .card {
-    width: 315px;
-    height: auto;
-    margin-top: 30px;
-    padding-top: 15px;
-    padding-bottom: 30px;
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-  }
+width: auto;
+height: auto;
+padding-top: 15px;
+padding-bottom: 30px;
+background-color: #fff;
+border-radius: 5px;
+box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
 
-  .delete-button {
-    background-color: #ffffff;
-    color: rgb(0, 0, 0);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.505);
-    border: none;
-    height:28px;
-    width: 28px;
-    margin-left: 15px;
-    border-radius: 5px;
-    padding: 7px;
-    font-size: 14px;
-    cursor: pointer;
-    transition: background-color 0.7s ease-in-out;
-  }
-  
-  .card-header {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    font-size: 15px;
-    margin-bottom: 5px;
-    margin-top:-10px;
-  }
-  
-  .card-body {
-    margin-top: -20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
+.delete-button {
+background-color: #ffffff;
+color: rgb(0, 0, 0);
+box-shadow: 0 2px 4px rgba(0, 0, 0, 0.505);
+border: none;
+height: 28px;
+width: 28px;
+margin-left: 15px;
+border-radius: 5px;
+padding: 7px;
+font-size: 14px;
+cursor: pointer;
+transition: background-color 0.7s ease-in-out;
+}
 
-  p {
-    font-size: 20px;
-    margin-bottom: 10px;
-  }
+.card-header {
+display: flex;
+flex-direction: row;
+justify-content: center;
+text-align: center;
+align-items: center;
+font-size: 15px;
+margin-bottom: 5px;
+margin-top: -10px;
+}
 
-  .price {
-    color: #3cff00;
-    font-size: 22px;
-    font-weight: bolder;
-    margin-bottom: 10px;
-  }
+.card-body {
+margin-top: -20px;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+}
 
-  .open-modal-button {
-    background-color: #ffffff;
-    font-family: 'Rubik', sans-serif;
-    color: rgb(0, 0, 0);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    border: none;
-    margin-top:20px;
-    border-radius: 5px;
-    padding: 8px;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background-color 0.2s ease-in-out; 
-  }
+p {
+font-size: 20px;
+margin-bottom: 10px;
+}
+
+.price {
+color: #3cff00;
+font-size: 22px;
+font-weight: bolder;
+margin-bottom: 10px;
+}
+
+
  
   .card.green {
     background-color: rgba(0, 255, 0, 0.353);
