--- a/stocks/src/components/StockGrid.css
+++ b/stocks/src/components/StockGrid.css
@@ -1,24 +1,20 @@
 .stock-grid {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    justify-items: center;
-    align-items: center;
-    color: white;
-  }
-  @media (max-width: 1300px) {
-    .stock-grid {
-      grid-template-columns: repeat(3, 1fr);
-    }
-  }
-  
-  @media (max-width: 1100px) {
-    .stock-grid {
-      grid-template-columns: repeat(2, 1fr);
-    }
-  }
-  @media (max-width: 650px) {
-    .stock-grid {
-      grid-template-columns: repeat(1, 1fr);
-    }
-  }
-  
+  margin-top: 40px;
+  margin-right: 15px;
+  margin-left: 30px;
+  color: white;
+  width: 100%;
+}
+
+.split {
+  display: flex;
+}
+
+.stock-modal {
+  max-width: fit-content;
+  margin-top: 40px;
+  margin-right: 30px;
+  margin-left: 15px;
+  height: 95vh;
+  overflow-y: scroll;
+}
